<resources>
    <string name="app_name">BusCounts</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="logout_button_text">Log Out</string>
    <string name="login_title">Log In</string>

    <string name="title_section1">Ride</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Deals</string>

    <string name="dashboard_title_green">Green Points</string>
    <string name="dashboard_title_rides">Number of rides</string>
    <string name="dashboard_title_km">Kilometers on bus</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="get_on_bus_button_text">Get on my bus</string>
    <string name="get_off_bus_button_text">Get off bus</string>
    <string name="statusbar_riding_bus">Riding bus</string>
    <string name="statusbar_next_stop">Next stop</string>
    <string name="statusbar_points">Points</string>
    <string name="error_no_bus_found">No bus within 50m found</string>
    <string name="success_green_points">Green Points</string>
    <string name="to">" to "</string>

</resources>
