<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statusLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:elevation="2dp"
    android:background="@color/white"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="12dp">

    <TableRow>
        <TextView
            android:text="@string/statusbar_riding_bus"
            android:textSize="12sp"
            android:textColor="@color/caption"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:text="@string/statusbar_next_stop"
            android:textSize="12sp"
            android:textColor="@color/caption"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:text="@string/statusbar_points"
            android:textSize="12sp"
            android:textColor="@color/caption"
            android:layout_gravity="fill_horizontal" />
    </TableRow>

    <TableRow android:paddingBottom="8dp">
        <TextView
            android:id="@+id/statusview_current_bus"
            android:text="Loading..."
            android:textColor="@color/background"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statusview_current_next_stop"
            android:text="Loading...                   "
            android:textColor="@color/background"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/statusview_current_points"
            android:text="0"
            android:textColor="@color/primary"
            android:textSize="18sp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_ride_button_text"
            android:textSize="14sp"
            android:id="@+id/stop_ride_button"
            android:layout_column="0"
            android:layout_span="3"
            android:background="@color/red_error"
            android:layout_marginTop="4dp"
            android:layout_gravity="top" />
    </TableRow>

</TableLayout>